[package]
name = "data_structures_algorithms_rust_2"
version = "0.1.0"
edition = "2024"


[workspace]
members = [
    "two_sum",
    "add_two_numbers",
    "longest_substring_without_repeating_characters", 
    "longest_palindromic_substring",
    "reverse_integer",
    "string_to_integer_atoi",
    "palindrome_number",
    "container_with_most_water",
    "integer_to_roman",
    "roman_to_integer",
    "longest_common_prefix",
    "three_sum",
    "three_sum_closest",
    "letter_combinations_of_a_phone_number",
    "four_sum",
    "remove_nth_node_from_end_of_list",
    "valid_parentheses",
    "merge_two_sorted_lists",
    "generate_parentheses",
    "swap_nodes_in_pairs",
    "remove_duplicates_from_sorted_array",
    "remove_element",
    "find_the_index_of_the_first_occurrence_in_a_string"
]

[dependencies]

