[package]
name = "data_structures_algorithms_rust_2"
version = "0.1.0"
edition = "2024"


[workspace]
members = [
    "two_sum",
    "add_two_numbers",
    "longest_substring_without_repeating_characters", 
    "longest_palindromic_substring",
    "reverse_integer",
    "string_to_integer_atoi",
    "palindrome_number",
    "container_with_most_water",
    "integer_to_roman",
    "roman_to_integer",
    "longest_common_prefix",
    "three_sum",
    "three_sum_closest",
    "letter_combinations_of_a_phone_number",
    "four_sum",
    "remove_nth_node_from_end_of_list",
    "valid_parentheses",
    "merge_two_sorted_lists",
    "generate_parentheses",
    "swap_nodes_in_pairs",
    "remove_duplicates_from_sorted_array",
    "remove_element",
    "find_the_index_of_the_first_occurrence_in_a_string",
    "divide_two_integers",
    "next_permutation",
    "search_in_rotated_sorted_array",
    "find_first_and_last_position_of_element_in_sorted_array",
    "search_insert_position",
    "valid_sudoku",
    "combination_sum",
    "combination_sum_ii",
    "jump_game_ii",
    "permutations",
    "permutations_ii",
    "rotate_image",
    "group_anagrams",
    "maximum_subarray",
    "spiral_matrix",
    "jump_game",
    "merge_intervals",
    "insert_interval",
    "unique_paths",
    "minimum_path_sum"
]

[dependencies]

