[workspace]
members = [
    "two_sum",
    "add_two_numbers",
    "longest_substring_without_repeating_characters", 
    "longest_palindromic_substring",
    "reverse_integer",
    "string_to_integer_atoi",
    "palindrome_number",
    "container_with_most_water",
    "integer_to_roman",
    "roman_to_integer",
    "longest_common_prefix",
    "three_sum",
    "three_sum_closest",
    "letter_combinations_of_a_phone_number",
    "four_sum",
    "remove_nth_node_from_end_of_list",
    "valid_parentheses",
    "merge_two_sorted_lists",
    "generate_parentheses",
    "swap_nodes_in_pairs",
    "remove_duplicates_from_sorted_array",
    "remove_element",
    "find_the_index_of_the_first_occurrence_in_a_string",
    "divide_two_integers",
    "next_permutation",
    "search_in_rotated_sorted_array",
    "find_first_and_last_position_of_element_in_sorted_array",
    "search_insert_position",
    "valid_sudoku",
    "combination_sum",
    "combination_sum_ii",
    "jump_game_ii",
    "permutations",
    "permutations_ii",
    "rotate_image",
    "group_anagrams",
    "maximum_subarray",
    "spiral_matrix",
    "jump_game",
    "merge_intervals",
    "insert_interval",
    "unique_paths",
    "minimum_path_sum",
    "plus_one",
    "add_binary",
    "climbing_stairs",
    "edit_distance",
    "sort_colors",
    "subsets",
    "word_search",
    "remove_duplicates_from_sorted_list",
    "merge_sorted_array",
    "unique_binary_search_trees",
    "validate_binary_search_tree",
    "binary_tree_level_order_traversal",
    "binary_tree_zigzag_level_order_traversal",
    "construct_binary_tree_from_preorder_and_inorder_traversal",
    "flatten_binary_tree_to_linked_list",
    "best_time_to_buy_and_sell_stock",
    "word_ladder",
    "longest_consecutive_sequence",
    "word_break",
    "lru_cache",
    "sort_list",
    "maximum_product_subarray",
    "min_stack",
    "reverse_words_in_a_string_ii",
    "rotate_array",
    "house_robber",
    "binary_tree_right_side_view",
    "number_of_islands",
    "reverse_linked_list",
    "course_schedule",
    "implement_trie_prefix_tree",
    "course_schedule_ii",
    "kth_largest_element_in_an_array",
    "maximal_square",
    "invert_binary_tree",
    "kth_smallest_element_in_a_bst",
    "lowest_common_ancestor_of_a_binary_tree",
    "product_of_array_except_self",
    "search_a_2d_matrix_ii",
    "valid_anagram",
    "meeting_rooms_ii",
    "palindrome_permutation",
    "perfect_squares",
    "move_zeroes",
    "find_the_duplicate_number",
    "game_of_life",
    "longest_increasing_subsequence",
    "coin_change",
    "reconstruct_itinerary",
    "house_robber_iii",
    "reverse_string",
    "top_k_frequent_elements",
    "design_tic_tac_toe",
    "find_leaves_of_binary_tree",
    "insert_delete_getrandom_o1",
    "decode_string",
    "fizz_buzz",
    "partition_equal_subset_sum"
]

[package]
name = "data_structures_algorithms_rust_2"
version = "0.1.0"
edition = "2024"

[dependencies]

